Blockchain site - h1 font-size

--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -63,9 +63,10 @@ body {
 }
 
 h1 {
-  font-size: 58px;
+  font-size: 64px;
   font-weight: 900;
   text-align: center;
+  margin-top: 80px;
 }
 
 h2 {
