TM Case Studies - G-R-E site

--- a/www.topmonks.com/src/stylesheets/case-studies-common.scss
+++ b/www.topmonks.com/src/stylesheets/case-studies-common.scss
@@ -4,6 +4,9 @@
   h3 {
     font-weight: 400;
   }
+  h3.h3_gorealeurope {
+    width: 940px;
+  }
   .tm-bgnd-wrapper {
     padding: 0 0 4%;
     background: #fff url(/images/bgnd_curve_3.svg) bottom no-repeat;
