--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -11,14 +11,14 @@
         <p class="sub-text">{{caseStudiesData.subTitle}}</p>
         {% endif %}
       </div>
-      {% if caseStudiesData.activeCase != 'adler' %}
+      {% if caseStudiesData.activeCase != 'go-real-europe' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
-        <a href="/case-studies/adler">
-          <div class="tm-case-studies__logo tm-case-studies__logo--adler">
-            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
-          <h3>Adler</h3></a>
-        <p>Tailor-made solution to automate the process of purchasing, marketing, and sales, with the vision that the applications will be integrated into one comprehensive administration platform in the future.</p>
+        <a href="/case-studies/gorealeurope">
+          <div class="tm-case-studies__logo tm-case-studies__logo--gorealeurope">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_gorealeurope')}}</div></div>
+          <h3>GoRealEurope</h3></a>
+        <p>GRE is a fast-growing travel startup specializing in crafting personalized itineraries for any type of traveler wanting to touch down and explore the gems of Europe.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
