--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -14,21 +14,25 @@
       {% if caseStudiesData.activeCase != 'go-real-europe' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
-        <a href="/case-studies/gorealeurope">
+        <a href="/case-studies/go-real-europe/">
           <div class="tm-case-studies__logo tm-case-studies__logo--gorealeurope">
-            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_gorealeurope')}}</div></div>
-          <h3>GoRealEurope</h3></a>
-        <p>GRE is a fast-growing travel startup specializing in crafting personalized itineraries for any type of traveler wanting to touch down and explore the gems of Europe.</p>
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_gorealeurope')}}</div>
+          </div>
+          <h3>Go Real Europe</h3></a>
+        <p>GRE is a fast-growing travel startup specializing in crafting personalized itineraries for any type of
+          traveler wanting to touch down and explore the gems of Europe.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
-        <a href="/case-studies/price-fx">
+        <a href="/case-studies/price-fx/">
           <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
-            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div>
+          </div>
           <h3>Price f(x)</h3></a>
-        <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and also helping to improve UX of the current website.</p>
+        <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and also
+          helping to improve UX of the current website.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'cs' %}
@@ -36,9 +40,11 @@
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
         <a href="/case-studies/ceska-sporitelna-web-api/">
           <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna">
-            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_cs')}}</div></div>
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_cs')}}</div>
+          </div>
           <h3>Česká Spořitelna WebAPI</h3></a>
-          <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of public API.</p>
+        <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of public
+          API.</p>
       </div>
       {% endif %}
     </div>
