--- a/www.topmonks.com/src/stylesheets/about-us.scss
+++ b/www.topmonks.com/src/stylesheets/about-us.scss
@@ -7,6 +7,7 @@
     position: absolute;
     top: 14px;
     right: 14px;
+    cursor: pointer;
     @media screen and (min-width: 400px) {
       top: 24px;
       right: 24px;
