--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -19,7 +19,7 @@
 .tm-layout-wrapper {
   max-width: 900px;
   margin: 0 auto;
-  //padding: 16px;
+  padding: 16px;
   --mdc-layout-grid-margin-desktop: 0;
   --mdc-layout-grid-margin-tablet: 0;
   --mdc-layout-grid-margin-phone: 0;
@@ -31,15 +31,29 @@ header {
 .tm-header {
   margin-top: 1.5em;
 }
+.upcoming-poster {
+  display: none;
+    }
 
 .tm-layout-grid__cell--span-0-desktop {
   @media screen and (min-width: 840px) {
     display: none;
+    .opening_text {
+      margin-top: 6em;
+  }
+}
+}
+@media (min-width: 2024px) {
+  #uvod {
+    margin: 0 0 6em;
+  .opening_text {
+    padding-top: 8em;
+}
   }
 }
 
 section {
-  margin-bottom: 3em;
+  margin: 3em 0;
   min-height: 10em;
 }
 
@@ -51,13 +65,12 @@ section {
   font-size: 0.875em;
   background-color: #FFFFFF;
 }
+main #main_content {
+  background: url("https://res.cloudinary.com/topmonks/image/upload/c_scale,h_590,w_1280/v1542985969/caffe.topmonks.cz/main_BG.png") no-repeat;
+  background-size: 100%;
+  }
 
 #uvod {
-  background: url("/images/main_BG.png") center no-repeat;
-  background-size: 100%;
-  height: 790px;
-  margin: 0 auto;
-
   p {
     font-size: 1.5em;
   }
@@ -65,7 +78,7 @@ section {
     text-align: right;
   }
   .opening_text {
-    margin-top: 12em;
+    margin-top: 6em;
     color: #FFFFFF;
     text-align: left;
   }
@@ -73,7 +86,7 @@ section {
   .newest-news {
     width: 228px;
     margin: 3em 6em;
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 12);
+    box-shadow: 0 0.44em 1.1em rgba(0,0,0,.2);
     background-color: #FFFFFF;
     p {
       line-height: 0;
@@ -95,7 +108,7 @@ section {
       .date {
         color: #233341;
       }
-      .meet-up .date {
+     .date {
         padding: 18px 0;
       }
     }
@@ -107,12 +120,15 @@ section {
       border-top: 1px solid #EEEEEE;
       padding: 0;
     }
-
+.meetup-logo svg {
+  padding: 18px;
+}
     .confirm-btn {
       margin: 0 auto;
+      align-self: center;
       a.button {
         background-color: #01A2C7;
-        padding: 12px 34px;
+        padding: 8px 14px;
         border: none;
         border-radius: 4px;
         font-size: 14px;
@@ -176,4 +192,63 @@ section {
 // Docasny styl pro history events
 .history img{
   width: 100%;
+}
+@media (max-width: 768px) { 
+  #uvod  {
+    .newest-news {
+    margin: 0;
+  }
+  .opening_text {
+   margin-top: 0;
+   padding-left: 2em;
+  }
+  h1 {
+    font-size: 2em;
+  }
+  p {
+    font-size: 1em;
+  }
+}
+}
+
+
+@media (max-width: 480px) {
+  main #main_content {
+    background: none;
+  }
+  #uvod {
+  .opening_text {
+    color: #4a4a4a;
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .newest-news {
+    margin: 0 auto
+  }
+  .meetup-logo {
+    text-align: center;
+  }
+  .meetup-logo svg {
+    padding: 0;
+    margin: 0 auto;
+  }
+  .news_content-details svg {
+    padding-bottom: 0;
+  }
+  .confirm-btn {
+padding: 24px;
+  }
+}
+#recnici {
+  background-size: auto;
+  height: 100%;
+  p {
+    line-height: 1.5;
+  }
+.speakers_content{
+  margin: 0.5em 0;
+
+}
+}
 }
