--- a/caffe.topmonks.cz/src/html/layouts/application.html
+++ b/caffe.topmonks.cz/src/html/layouts/application.html
@@ -1,54 +1,58 @@
 {%- import 'macros/helpers.html' as macros -%}
 <!DOCTYPE html>
-<html>
+<html lang="cs">
+
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{{ title }}{% endblock %}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Preload CDN assets -->
   <link rel="preconnect" href="https://ajax.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <!-- Custom Fonts -->
-  <script>WebFontConfig={google:{families:["Lato:400,700:latin-ext"]}, async:true}</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous"></script>
+  <script>WebFontConfig = { google: { families: ["Lato:400,700:latin-ext"] }, async: true }</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
+    crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-N3FJXVH');</script>
+  <script>(function (w, d, s, l, i) {
+              w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                  new Date().getTime(), event: 'gtm.js'
+              }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                  'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-N3FJXVH');</script>
   <!-- End Google Tag Manager -->
 
   {% block head %}{% endblock %}
   {% include "shared/app-icons.html" %}
 </head>
+
 <body>
-<div class="wrapper-outer">
+  <div class="wrapper-outer">
 
-  <main>
-    {% block content %}{% endblock %}
-  </main>
-</div>
-<div class="wrapper-outer footer">
+    <main>
+      {% block content %}{% endblock %}
+    </main>
+  </div>
+  <div class="wrapper-outer footer">
     {% include 'shared/footer.html' %}
-</div>
+  </div>
 
-{% block javascript %}
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3FJXVH"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  {% block javascript %}
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3FJXVH" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-{% endblock %}
+  {% endblock %}
 
 </body>
-</html>
 
+</html>
