"Create Site" Cleanup
* moved to .scripts folder
* cleanup the APP -> SITE terminology
* creates test-broken-links script as well
* added support for shared assets by default
* removed example for shared asssets

--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -44,7 +44,8 @@
   {% block content %}{% endblock %}
 </main>
 
-{% include 'shared/footer.html' %}
+<link rel="stylesheet" href="/stylesheets/footer.css">
+{% include 'common/footer.html' %}
 
 {% block javascript %}
 {% endblock %}
