--- a/www.topmonks.cz/src/stylesheets/footer.scss
+++ b/www.topmonks.cz/src/stylesheets/footer.scss
@@ -57,7 +57,7 @@ text-align: right;
     padding: 4px 12px 0;
   }
   @media (max-width: 480px) {
-    padding: 6px 0;
+    padding: 6px;
   }
 }
 @media (max-width: 480px) {
