--- a/caffe.topmonks.cz/src/html/layouts/topmonks.html
+++ b/caffe.topmonks.cz/src/html/layouts/topmonks.html
@@ -1,4 +1,3 @@
-{%- import 'macros/helpers.html' as macros -%}
 <!doctype html>
 <html>
 <head>
@@ -9,6 +8,9 @@
   <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 
   <!-- Preload CDN assets -->
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://ajax.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -16,7 +18,6 @@
   <script>WebFontConfig={google:{families:["Lato:400,700,900:latin-ext"]}, async:true}</script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 
