Prodeti.web - zruseni sekce Lektori, zmena kontaktu, zmena textu

--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -642,15 +642,9 @@ footer {
   text-align: center;
 }
 
-.contact .mail::before {
-  content: "";
-  display: block;
-  background: url("/images/jiri.penzes.png") no-repeat;
-  background-size: contain;
+.contact img {
   border-radius: 50%;
-  width: 84px;
-  height: 84px;
-  margin: 15px auto;
+  margin: 13px auto;
 }
 
 .social {
