--- a/www.hookahmonk.com/src/stylesheets/main.scss
+++ b/www.hookahmonk.com/src/stylesheets/main.scss
@@ -1,7 +1,73 @@
-@import "../../../../node_modules/@material/layout-grid/mdc-layout-grid";
+@import "../../node_modules/@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
+
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
 }
+
+body {
+  font-family: Century Gothic, Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+/* Typography */
+
+h1 {
+  font-size: 70px;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 30px;
+  border-left: 62px solid #E25822;
+}
+
+footer {
+  font-size: 15px;
+  h3 {
+    font-weight: bold;
+  }
+}
+
+p {
+  font-size: 18px;
+}
+
+p.sub-text {
+  font-size: 24px;
+}
+
+p.text-bold {
+  font-weight: bold;
+}
+
+a.button {
+  display: block;
+  font-size: 18px;
+  color: #fff;
+  background-color: #E25822;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .16);
+  padding: 10px 28px;
+  margin: 0 1em;
+  text-align: center;
+}
+
+/* Footer */
+footer {
+  background: url("https://res.cloudinary.com/topmonks/image/upload/v1543849049/hookamonk.com/footer_bgnd.png") no-repeat;
+  background-size: 100%;
+  a {
+    text-decoration: none;
+    text-underline: none;
+  }
+}
+
+
+
+
+
