--- a/www.hookahmonk.com/src/stylesheets/main.scss
+++ b/www.hookahmonk.com/src/stylesheets/main.scss
@@ -315,8 +315,24 @@ footer {
       text-align: center;
       border-left: none;
     }
+
     .button a.button {
       position: inherit;
+    }
+
+    .order_1 {
+      order: 1;
+    }
+
+    .order_2 {
+      order: 2;
+    }
+    .order_3 {
+      order: 3;
+    }
+
+    .order_4 {
+      order: 4;
     }
   }
   footer {
