Kontakt web text title styles

--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -113,6 +113,12 @@ blockquote {
     padding: 20px 8px;
   }
 }
+.page_sub-title p {
+  font-size: 24px;
+  color: var(--tm-contact-darkgrey);
+  text-align: center;
+  opacity: 0.7;
+}
 
 .action-button {
   font-weight: 700;
