Footer underline - none

--- a/www.topmonks.com/src/stylesheets/footer.scss
+++ b/www.topmonks.com/src/stylesheets/footer.scss
@@ -34,6 +34,9 @@
 .footer_social-buttons {
   text-align: right;
 }
+.tm-footer .tm-footer_nav a{
+  text-underline: none;
+}
 .social-buttons {
   background-color: #fff;
   border-radius: 52px;
